--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  margin: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background: #02cf81;
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #535353;
+  font-size: 3em;
+  line-height: 1.1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #ffe70d;
+  cursor: pointer;
+  border: 3px solid #535353;
+  color: #535353;
+}
+
+input, button{
+  margin: 20px;
+}
+
+input{
+  padding: 10px;
+  width: 300px;
+  height: 40px;
+  border: 3px solid #535353;
+  border-radius: 10px;
+}
+
+li{
+  text-decoration: none;
+  list-style-type:decimal-leading-zero;
+  color: #535353;
+  text-align: start;
+  padding: 10px;
 }
